[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sasana"
version = "1.0.0"
description = "Tamper-evident cryptographic audit trail for OpenClaw and multi-agent AI sessions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "cryptography>=41.0",
]

[project.optional-dependencies]
observer = ["websockets>=12.0", "pyyaml>=6.0"]
dev     = ["pytest>=7.0", "ruff>=0.4"]

[project.scripts]
sasana         = "sasana_cli:main"
agentops-verify = "verify:main"

[tool.setuptools.packages.find]
include = ["sasana*"]

[tool.setuptools]
py-modules = ["verify", "sasana_cli"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501"]
