[package]
name = "sasana"
version = "1.0.0"
edition = "2021"
description = "Tamper-evident audit trail verifier for OpenClaw and multi-agent AI sessions"
license = "MIT"
keywords = ["audit", "security", "tamper-evident", "openclaw", "ai-agents"]
categories = ["command-line-utilities", "cryptography"]

[[bin]]
name = "sasana"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
ring = "0.17"
base64 = "0.22"
